# nicegui-sso-demo-claude

./: .gitignore  Dockerfile  IntegrationGuide.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_example.py  verify_script.sh
REPORTS/: Lazy_SSO_Analysis_Report.md  Walkthrough_Lazy_SSO_2026-01-16.md
cache/: portal_public.pem
